--- a/style/stylemobile.css
+++ b/style/stylemobile.css
@@ -1051,7 +1051,7 @@
         font-size:30px;
     }
     #contact-wrapper {
-        padding:20px;
+        padding-bottom:20px;
     }
 
     #contact-wrapper form {
